# CounterSouls

./: Cargo.toml  README.md
.github/workflows/: pr-tests.yml  release-build.yml
countersouls-client/: Cargo.toml
countersouls-client/src/: main.rs
countersouls-protocol/: Cargo.toml
countersouls-protocol/src/: lib.rs
countersouls-server/: Cargo.toml
countersouls-server-gui/: Cargo.toml
countersouls-server-gui/src/: main.rs
countersouls-server/src/: main.rs
countersouls-server/tests/: smoke.rs
