[package]
name = "countersouls-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
countersouls-protocol = { version = "0.1.0", path = "../countersouls-protocol" }
directories = "6.0.0"
eframe = "0.33.3"
futures-util = "0.3.32"
notify = "8.2.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = "0.28.0"
