[package]
name = "countersouls-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
countersouls-protocol = { version = "0.1.0", path = "../countersouls-protocol" }
futures-util = "0.3.32"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "fs", "time"] }
tokio-tungstenite = "0.28.0"
